# ai-incident-response-system

./: .gitignore  README.md  pyproject.toml
app/: celery_app.py  main.py
app/ai/: analyzer.py  client.py  prompts.py  schemas.py
app/api/: health.py
app/automation/: base.py  engine.py  registry.py  rules.py
app/core/: config.py  dependencies.py  exception_handlers.py  logging.py  providers.py  redis.py
app/exceptions/: incident.py
app/models/: automation_rule.py  automation_run.py  enums.py  incident.py
app/monitoring/: metric_keys.py  metrics.py  prometheus.py  redis_metrics.py  service.py
app/pipelines/: incident.py
app/rag/: embeddings.py  ingest.py  retriever.py
app/repositories/: automation_rule.py  automation_run.py  base.py  incident.py
app/schemas/: incident.py
app/services/: automation_rule.py  automation_run.py  incident.py
app/tasks/: base.py  incident.py
app/webhooks/: models.py  router.py  schemas.py  security.py  service.py
migrations/: env.py
migrations/versions/: 13444be3fc5d_create_incidents_table.py  20b458b6c3ff_add_automation_rule_config.py  321484be3caf_create_incidents_table.py  384937969c7a_add_severity_column.py  40303450d23e_create_automation_rules.py  4c2ee31c0c63_add_incident_status_and_severity_enums.py  4df89303f05a_create_automation_runs_table.py  56380a077d2c_initial_schema.py  75344872814a_create_automation_runs_table.py  7aa48473f111_create_automation_runs_table.py  915ef5df44e2_added_rag_sources_to_incident_model.py  (+2 more)
scripts/: collect_logs.sh  playground.py  test_ai.py  test_registry.py  test_repository.py
(+14 files in other folders)
