[project]
name = "ai-incident-response-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "celery>=5.6.3",
    "chromadb>=1.5.9",
    "fastapi>=0.138.2",
    "flower>=2.0.1",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "prometheus-client>=0.25.0",
    "psycopg>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

